# CardScope

./: CNAME  README.md  backend.Dockerfile  docker-compose.yml  pyproject.toml  run.py  sql_app.db
backend/app/: database.py  load_sample_data.py  main.py  schemas.py
backend/app/api/: auth.py  cards.py
backend/app/cv/: processor.py
backend/app/models/: models.py
backend/app/services/: auth.py  external_api.py  recognition.py  s3_service.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx  index.css  index.tsx  serviceWorkerRegistration.ts
