[tool.poetry]
name = "cardscope"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
pydantic = "^2.5.3"
opencv-python = "^4.9.0.80"
pytesseract = "^0.3.10"
numpy = "^1.26.3"
python-multipart = "^0.0.6"
aiofiles = "^23.2.1"
boto3 = "^1.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
